# ai-devops-assistant

./: .gitignore  Dockerfile  LICENSE  README.md  buildspec.yml  requirements.txt
agent/: agent.py  pyproject.toml
mcp-server/: config.py  pyproject.toml  server.py
mcp-server/tools/: cloudwatch.py  costs.py  ec2.py  s3.py
terraform/: backend.tf  compute.tf  iam.tf  main.tf  pipeline.tf  terraform.tfstate.backup  variables.tf  vpc.tf
