[project]
name = "ai-devops-agent"
version = "0.1.0"
description = "AI Agent using Claude API with MCP tool calling for DevOps assistance"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
